--- a/Frontend/CSS/style.css
+++ b/Frontend/CSS/style.css
@@ -1,114 +1,108 @@
-/* Haalt die scrollbar weg */
-* { /* Firefox */
-    scrollbar-width: none;
-}
-::-webkit-scrollbar { /* Chrome */
-    display: none;
+body
+{
+    margin: 0px;
 }
 
-body {
-    margin: unset;
-    height: 100vh;
-    width: 100vw;
+header
+{
+    background-image: url(../Images/137480.jpg);
+    position: fixed; 
+    top: 0; 
+    width: 100%; 
 }
 
-header {
-    background: linear-gradient(180deg, rgba(65,65,65,1) 0%, rgba(0,0,0,1) 100%);
-
+main
+{
+    margin-left: 90px;
+    margin-right: 90px;
+    margin-top: 130px;
+}
+h1
+{
+    margin: 0px;
+    color: #adadad;
+}
+hr
+{
+    color: #adadad;
 }
 
-header > h1 {
-    color: #fff;
-    text-align: center;
+.menu
+{
+    float: right
 }
 
-main {
-    width: 100%;
-    overflow: auto;
+.menu , .logo
+{
+    height: 80px;
+    margin-right: 10px;
 }
 
-main > section {
+.bigImg
+{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    border-radius: 8px;
+    height: 600px;
+    box-shadow: 1px 1px 0px #3E5AB7 ,
+                2px 2px 0px #3E5AB7 ,
+                3px 3px 0px #3E5AB7 ,
+                4px 4px 0px #3E5AB7 ,
+                5px 5px 0px #3E5AB7 ,
+                6px 6px 0px #3E5AB7 ;
+}
+
+.textimageleft
+{
+    height: 300px;
+    float: left;
     margin: 10px;
+    border-radius: 8px;
+     box-shadow: 1px 1px 0px #3E5AB7 ,
+                2px 2px 0px #3E5AB7 ,
+                3px 3px 0px #3E5AB7 ,
+                4px 4px 0px #3E5AB7 ,
+                5px 5px 0px #3E5AB7 ,
+                6px 6px 0px #3E5AB7 ;
 }
 
-footer,
-#menu {
-    color: #fff;
+.textimageright
+{
+    height: 300px;
+    float: right;
+    margin: 10px;
+    border-radius: 8px;
+     box-shadow: 1px 1px 0px #3E5AB7 ,
+                 2px 2px 0px #3E5AB7 ,
+                 3px 3px 0px #3E5AB7 ,
+                 4px 4px 0px #3E5AB7 ,
+                 5px 5px 0px #3E5AB7 ,
+                 6px 6px 0px #3E5AB7 ;
 }
 
-footer {
-    background: #2d38fd;
+p
+{
+    font-size: 20px;
 }
 
-footer > p,
-main > h2:first-child {
-    text-align: center;
+.programma
+{
+    background-image: url(../Images/Background-opacity.jpg);
+    padding: 50px;
 }
 
-a {
-    text-decoration: none;
-}
-
-a:visited {
-    color: #fff;
-}
-
-ul{
-    list-style: none;
-}
-
-td {
-    width: 250px;
-    vertical-align: top;
-    height: 30px;
-}
-
-label {
-    font-weight: bold;
-}
-
-.long {
-    width: 300px;
-    padding: unset;
-}
-
-.select {
-    width: 302px !important;
-}
-
-.maincont {
-    height: 100%;
-}
-
-.flex-verti {
-    display: flex;
-    flex-direction: column;
-}
-
-.flex-horizon {
-    display: flex;
-    flex-direction: row;
-}
-
-#menu {
-    padding-left: 5px;
-    padding-right: 10px;
-
-    height: 100%;
-    width: 15%;
-}
-
-#menu{
-    background: linear-gradient(180deg, rgba(34,193,195,1) 0%, rgba(45,56,253,1) 100%);
-}
-
-#rivm,
-#rivm:visited {
-    color: blue;
-    text-decoration: underline;
-}
-
-#first  + label,
-#second + label {
-    font-weight: normal;
+.programmaImg
+{
+  margin-left: auto;
+    margin-right: auto;
+    display: block;
+    height: 600px;
+    border-radius: 8px;
+     box-shadow: 1px 1px 0px #3E5AB7 ,
+                 2px 2px 0px #3E5AB7 ,
+                 3px 3px 0px #3E5AB7 ,
+                 4px 4px 0px #3E5AB7 ,
+                 5px 5px 0px #3E5AB7 ,
+                 6px 6px 0px #3E5AB7 ;
 }
