--- a/Frontend/CSS/style.css
+++ b/Frontend/CSS/style.css
@@ -1,6 +1,16 @@
+/* Haalt die scrollbar weg */
+* { /* Firefox */
+    scrollbar-width: none;
+}
+::-webkit-scrollbar { /* Chrome */
+    display: none;
+}
+
 body
 {
-    margin: 0px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 header
@@ -17,14 +27,26 @@ main
     margin-right: 90px;
     margin-top: 130px;
 }
+
 h1
 {
-    margin: 0px;
+    margin: 0;
     color: #adadad;
 }
 hr
 {
     color: #adadad;
+}
+
+footer
+{
+    height: 40px;
+    background: #3E5AB7;
+    justify-content: center;
+}
+
+footer > p {
+    margin: unset;
 }
 
 .menu
@@ -51,6 +73,7 @@ hr
                 4px 4px 0px #3E5AB7 ,
                 5px 5px 0px #3E5AB7 ,
                 6px 6px 0px #3E5AB7 ;
+
 }
 
 .textimageleft
