--- a/Frontend/CSS/style.css
+++ b/Frontend/CSS/style.css
@@ -1,3 +1,9 @@
+/* Importeer de font */
+@font-face {
+    font-family: Roboto;
+    src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+}
+
 /* Haalt die scrollbar weg */
 * { /* Firefox */
     scrollbar-width: none;
@@ -8,6 +14,8 @@
 
 body
 {
+    font-family: Roboto, sans-serif;
+
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -19,6 +27,10 @@ header
     position: fixed; 
     top: 0; 
     width: 100%;
+
+    /* Display-opties voor in de header bar */
+    display: flex;
+    justify-content: space-between;
 }
 
 main
