--- a/Frontend/CSS/dropdown.css
+++ b/Frontend/CSS/dropdown.css
@@ -9,6 +9,12 @@
     cursor: pointer;
 }
 
+.dropbtn,
+.dropdown,
+.dropdown-content {
+    min-width: 200px;
+}
+
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
     background-color: #2980B9;
@@ -25,7 +31,6 @@
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
